# devkit

./: .gitignore  CHANGELOG.md  Cargo.toml  Makefile  README.md  bootstrap.sh  cli.js  common.mk  fastapi.mk  index.d.ts  index.js  install.sh  nuxt.mk  package-lock.json  package.json  release-please-config.json  release-plz.toml  vue.mk
.github/: copilot-instructions.md
.github/workflows/: build-binaries.yml  cd.yml  release-please.yml  release-plz.yml  release.yml
bash/lib/: installer.sh  prompts.sh
docker/: README.md
lib/: generator.sh  gum.sh  prompts.sh  ui.sh  validator.sh
make/: common.mk  init.mk
old/: bootstrap.sh
old/lib/: ui.sh
scripts/: install-binary.js
src/: main.rs
src/cli/: commands.rs  mod.rs
src/config/: mod.rs
src/templates/: husky.mk
src/templates/makefiles/: init.mk
src/templates/nuxt/: Dockerfile
src/ui/: app.rs  event_handler.rs  mod-old.rs  mod.rs
templates/makefiles/: Makefile
test/: test-local.js
tests/: test-generator.sh
