[package]
name = "devkit"
version = "0.1.0"
edition = "2021"
authors = ["Kevin De Benedetti <contact@kevindb.dev>"]
description = "Project installer with interactive TUI"
license = "MIT"
repository = "https://github.com/kevindebenedetti/devkit"

[[bin]]
name = "installer"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
colored = "3.0.0"
