[package]
name = "devkit"
version = "0.1.0"
edition = "2021"
authors = ["Kevin De Benedetti"]
description = "A tool to configure web projects by stack"
license = "MIT"
repository = "https://github.com/kevindebenedetti/devkit"

[[bin]]
name = "devkit"
path = "src/main.rs"

[dependencies]
# Interface TUI
ratatui = "0.29"
crossterm = "0.29.0"

# CLI
clap = { version = "4.5.50", features = ["derive"] }

# Sérialisation
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Gestion d'erreurs
anyhow = "1.0"
thiserror = "2.0.17"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1